Use userfrosting/framework from packagist \o/

--- a/composer.json
+++ b/composer.json
@@ -23,17 +23,11 @@
     "config": {
         "vendor-dir": "app/vendor"
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/userfrosting/framework"
-        }
-    ],
     "require": {
         "php": "^7.3 | ^8.0",
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
-        "userfrosting/framework": "dev-master",
+        "userfrosting/framework": "^4.6",
         "symfony/console": "^5.1",
         "wikimedia/composer-merge-plugin": "^2.1.0"
     },
