Set psr/log to avoid conflict with dependencies

--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -30,6 +30,7 @@
         "composer/semver": "^3.2.4",
         "doctrine/dbal": "^2.5",
         "filp/whoops": "^2.14.0",
+        "psr/log": "^1.0.1",
         "illuminate/cache": "^8.5",
         "illuminate/database": "^8.5",
         "illuminate/events": "^8.5",
