Update env example

--- a/app/.env.example
+++ b/app/.env.example
@@ -2,7 +2,7 @@
 # Note that in production, it is strongly recommended that you set these variables directly in your environment instead.
 
 UF_MODE=""
-DB_DRIVER="mysql"
+DB_CONNECTION="mysql"
 DB_HOST="localhost"  # Some developer environments, like some MAMP installations, require you to instead set DB_HOST="127.0.0.1"
 DB_PORT="3306"
 DB_NAME="userfrosting"
