--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" backupStaticAttributes="false" bootstrap="vendor/autoload.php" colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" processIsolation="false" stderr="true" stopOnFailure="false" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    backupGlobals="false" 
+    backupStaticAttributes="false" 
+    bootstrap="vendor/autoload.php" 
+    colors="true" 
+    convertErrorsToExceptions="true" 
+    convertNoticesToExceptions="true" 
+    convertWarningsToExceptions="true" 
+    processIsolation="false" 
+    stderr="true" 
+    stopOnFailure="false" 
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+>
   <coverage includeUncoveredFiles="true" processUncoveredFiles="false">
     <include>
       <directory suffix=".php">app/src/</directory>
     </include>
+    <report>
+      <clover outputFile="_meta/coverage.xml"/>
+      <html outputDirectory="_meta/coverage"/>
+    </report>
   </coverage>
   <testsuites>
     <testsuite name="Unit Tests">
@@ -13,4 +29,7 @@
   <php>
     <env name="UF_MODE" value="testing"/>
   </php>
+  <listeners>
+    <listener class="\Mockery\Adapter\Phpunit\TestListener"></listener>
+  </listeners>
 </phpunit>
