--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,11 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
+        "phpstan/phpstan": "^1.1",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-mockery": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-strict-rules": "^1.0",
         "phpunit/phpunit": "^9.5",
         "mockery/mockery": "^1.2",
         "league/factory-muffin": "^3.0",
