--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,9 +1,10 @@
 parameters:
-  autoload_files:
-    - vendor/autoload.php
   level: max
   ignoreErrors:
-    # Ignore false positive PHPStan can't understand, until we can fix it
-    - '#Call to an undefined method Psr\\Container\\ContainerInterface::extend().#'
-    - '#Access to an undefined property Psr\\Container\\ContainerInterface::\$[a-zA-Z0-9\\_]+.#' # Ignore our CI container
-    - '#Call to an undefined static method UserFrosting\\Sprinkle\\[a-zA-Z0-9\\_]+\\Facades\\[a-zA-Z0-9\\_\(\):]+.#' # Ignore Facades
+    - '#Dynamic call to static method PHPUnit\\Framework\\.*#'
+    - '#Call to an undefined method Mockery\\Expectation::.*#'
+includes:
+  - vendor/phpstan/phpstan-strict-rules/rules.neon
+  - vendor/phpstan/phpstan-deprecation-rules/rules.neon
+  - vendor/phpstan/phpstan-mockery/extension.neon
+  - vendor/phpstan/phpstan-phpunit/extension.neon
