--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "userfrosting/framework": "dev-develop-5.0",
         "userfrosting/sprinkle-core": "*",
         "userfrosting/sprinkle-admin": "*",
-        "userfrosting/sprinkle-account": "*"
+        "userfrosting/sprinkle-account": "*",
+        "fullpipe/twig-webpack-extension": "^4.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
