--- a/.gitignore
+++ b/.gitignore
@@ -7,79 +7,45 @@
 .DS_Store
 
 # Ignore developer resources
-_meta/*
+_meta/
 
 # Ignore personal config files (dev)
 app/.env
 
-# Ignore composer-generated files
+# Ignore lock files
 composer.lock
-composer.phar
+package-lock.json
 
 # Ignore log, cache, sessions and storage directories
 app/cache/*
+app/database/*
 app/logs/*
 app/sessions/*
 app/storage/*
 
 # Unignore log, cache, sessions and storage .gitkeeps
 !app/cache/.gitkeep
+!app/database/.gitkeep
 !app/logs/.gitkeep
 !app/sessions/.gitkeep
 !app/storage/.gitkeep
 
-# Ignore bower vendor assets
-/app/sprinkles/*/assets/vendor/
-
-# Ignore sprinkles.json config file
-app/sprinkles.json
-
-# Ignore sample site sprinkle
-app/sprinkles/site-dev
-
 # Ignore Composer vendor
-vendor/*
+vendor/
 
 # Ignore node modules
-build/node_modules/*
-
-# Ignore generated bundle schema files
-build/bundle.config.json
-build/bundle.result.json
-
-# Ignore temporary build assets
-build/temp
-
-# Ignore npm-debug.log
-build/npm-debug.log
+node_modules/
 
 # Ignore compiled assets
-public/assets/*
-
-# Ignore minified assets (v0.3.x)
-public/js/min/*
-public/css/min/*
-
-# Ignore personal config files (v0.3.x)
-app/config-userfrosting.php
-
-# Physical database storage for containers (?)
-app/database/userfrosting.db
-
-# Ignore vendor assets
-app/assets/*
+public/assets/
 
 # Ignore Vagrant & Homestead VM
 vagrant/Homestead/
-.vagrant/*
+.vagrant/
 
-# Ignore dev utils cache
+# Ignore dev utility cache
 .phpunit.result.cache
 .php_cs.cache
 
 # Ignore api doc
 api/
-
-# Igore npm lockfile
-build/package-lock.json
-build/package.lock
