--- a/composer.json
+++ b/composer.json
@@ -24,26 +24,21 @@
         {
             "type": "vcs",
             "url": "https://github.com/userfrosting/sprinkle-core.git"
-        },
-        {
-            "type": "path",
-            "url": "../sprinkle-admin"
-        },
-        {
-            "type": "path",
-            "url": "../sprinkle-account"
         }
     ],
     "require": {
         "php": "^8.0",
         "ext-gd": "*",
         "userfrosting/framework": "dev-develop-5.0",
-        "userfrosting/sprinkle-core": "*",
-        "userfrosting/sprinkle-admin": "*",
-        "userfrosting/sprinkle-account": "*"
+        "userfrosting/sprinkle-core": "*"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.13",
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "phpstan/phpstan": "^1.1",
+        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan-mockery": "^1.0",
+        "phpstan/phpstan-phpunit": "^1.0",
+        "phpstan/phpstan-strict-rules": "^1.0",
         "phpunit/phpunit": "^9.5",
         "mockery/mockery": "^1.2",
         "league/factory-muffin": "^3.0",
