--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "php": "^7.3 | ^8.0",
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
+        "rockettheme/toolbox": "1.6.0",        
         "userfrosting/framework": "^4.6",
         "symfony/console": "^5.1",
         "wikimedia/composer-merge-plugin": "^2.1.0"
