--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_versions: ['7.3', '7.4', '8.0']
+        php_versions: ['7.3', '7.4', '8.0', '8.1']
 
     runs-on: ubuntu-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - MySQL
@@ -110,7 +110,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['7.3', '7.4', '8.0']
+          php_versions: ['7.3', '7.4', '8.0', '8.1']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - SQLite
@@ -180,7 +180,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['7.3', '7.4', '8.0']
+          php_versions: ['7.3', '7.4', '8.0', '8.1']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - PostgreSQL
@@ -256,7 +256,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          php_versions: ['7.3', '7.4', '8.0']
+          php_versions: ['7.3', '7.4', '8.0', '8.1']
 
     runs-on: windows-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - Windows
